--- a/cppJsonTest.vcxproj
+++ b/cppJsonTest.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{fcf5fcaf-29ce-461f-95e9-80a450352bda}</ProjectGuid>
     <RootNamespace>cppJsonTest</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Raytracer</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
