--- a/cppJsonTest.vcxproj
+++ b/cppJsonTest.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="JSONReader.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="RayTracer.cpp" />
+    <ClCompile Include="YuMath.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Eigen\Cholesky" />
