Fixed Camera - back to singleton

--- a/cppJsonTest.vcxproj.filters
+++ b/cppJsonTest.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="RayTracer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="YuMath.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Eigen\Cholesky" />
