--- a/cppJsonTest.vcxproj
+++ b/cppJsonTest.vcxproj
@@ -130,6 +130,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="JSONReader.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="RayTracer.cpp" />
