--- a/cppJsonTest.vcxproj.filters
+++ b/cppJsonTest.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CustomRandom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Eigen\UmfPackSupport" />
